<?xml	version="1.0"	encoding="utf-8"?>
<ScrollView	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:id="@+id/scroll_view">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layout">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hub_title"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        />
    <Button
        android:id="@+id/exo1_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hub_exercice1_sensorList"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/exo2_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hub_exercice2"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/exo3_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hub_exercice3"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/exo4_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hub_exercice4"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/exo5_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hub_exercice5"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/exo6_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hub_exercice6"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/exo7_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hub_exercice7"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/exo8_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hub_exercice8"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/exo9_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hub_exercice9"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        />
    </LinearLayout>
</ScrollView>